# ethsofia_hackaton

./: LICENSE  README.md  docker-compose.yml
config/: feeds_config.json
config/private/: README.txt
examples/: README.md
examples/cmc/: .gitignore  Cargo.toml  spin.toml
examples/cmc/src/: lib.rs
examples/revolut/: Cargo.toml  spin.toml
examples/revolut/src/: lib.rs
examples/yahoo/: Cargo.toml  spin.toml
examples/yahoo/src/: lib.rs
yahoo/: Cargo.toml  spin.toml
yahoo/src/: lib.rs
